--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,9 @@
 	</parent>
 
 	<properties>
-		<java.version>12</java.version>
+		<java.version>1.8</java.version>
+		<maven.compiler.source>1.8</maven.compiler.source>
+    	<maven.compiler.target>1.8</maven.compiler.target>
 	</properties>
 
 	<dependencies>
@@ -60,9 +62,14 @@
 
 	<build>
 		<plugins>
-			<!--plugin>
-                <artifactId>maven-compiler-plugin</artifactId>
-            </plugin>
+			<!--
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+				</configuration>
+			</plugin>
             <plugin>
                 <artifactId>maven-jar-plugin</artifactId>
                 <configuration>
@@ -73,7 +80,8 @@
 					</archive>
 					<outputDirectory>${project.basedir}/docker</outputDirectory>
                 </configuration>
-            </plugin-->
+            </plugin>
+            -->
 		
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
