Added Support for MySQL database.

--- a/pom.xml
+++ b/pom.xml
@@ -40,11 +40,11 @@
 		</dependency>
 
 		<!-- MySQL -->
-		<!--dependency>
+		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 			<scope>runtime</scope>
-		</dependency-->
+		</dependency>
 
 		<!-- H2 -->
 		<dependency>
