--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 api.version = api/v1
 
 # DataSource Settings (MySQL)
-#spring.jpa.hibernate.ddl-auto=update
-#spring.datasource.url=jdbc:mysql://localhost:3306/dNames
-#spring.datasource.username=test
-#spring.datasource.password=Test
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/dNames
+spring.datasource.username=test
+spring.datasource.password=test
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
 # Show All Queries
 spring.jpa.show-sql=true
@@ -24,12 +24,10 @@ spring.jpa.properties.hibernate.format_sql=true
 
 # Enabling H2 Console
 # http://localhost:8080/h2-console
-spring.h2.console.enabled=true
-spring.jpa.hibernate.ddl-auto=create
-spring.datasource.url=jdbc:h2:~/Downloads/dNames
-spring.datasource.username=sa
-spring.datasource.password=
-
-spring.datasource.driverClassName=org.h2.Driver
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-
+#spring.h2.console.enabled=true
+#spring.jpa.hibernate.ddl-auto=create
+#spring.datasource.url=jdbc:h2:~/Downloads/dNames
+#spring.datasource.username=sa
+#spring.datasource.password=
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
